<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/view_singlesolder_photo"
        android:contentDescription="@string/view_singlesolder_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/view_singlesolder_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view_singlesolder_photo"
        android:layout_toRightOf="@+id/view_singlesolder_photo"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/view_singlesolder_ability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/view_singlesolder_photo"
        android:layout_below="@+id/view_singlesolder_photo" />

    <ImageView
        android:id="@+id/view_singlesolder_life"
        android:contentDescription="@string/view_singlesolder_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_singlesolder_name"
        android:layout_toRightOf="@+id/view_singlesolder_photo"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/view_singlesolder_lifenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_singlesolder_name"
        android:layout_toRightOf="@+id/view_singlesolder_life" />

    <ImageView
        android:id="@+id/view_singlesolder_shape"
        android:contentDescription="@string/view_singlesolder_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/view_singlesolder_ability"
        android:layout_toRightOf="@+id/view_singlesolder_ability" />

    <ImageButton
        android:id="@+id/view_singlesolder_cancel"
        android:contentDescription="@string/view_singlesolder_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" 
        android:background="#00000000"/>

</RelativeLayout>